<resources>
    <string name="app_name">CoMapp</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Salir</string>

    <!-- Success -->
    <string name="database_success">Record saved</string>

    <!-- Errors -->
    <string name="server_error">There was an error please try again later</string>
    <string name="database_error">Database error</string>
    <string name="location_error">No location found</string>
    <string name="login_invalid">Invalid user or password</string>
    <string name="signup_invalid">Existing email address</string>
    <string name="camera_error">Camera error</string>
    <string name="camera_unavailable">No camera found</string>
    <string name="auth_error">Your session has expired. Please login again</string>

    <!-- Login -->
    <string name="mail_field">E-mail</string>
    <string name="password_field">Contraseña</string>
    <string name="login">Iniciar Sessión</string>

    <!-- Root -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_markers">Marcadores</string>
    <string name="navigation_drawer_surveys">Encuestas</string>
    <string name="navigation_drawer_sync">Sincronización</string>
    <string name="navigation_drawer_logout">Cerrar Sesión</string>

    <!-- Surveys -->
    <string name="surveys_empty">No hay encuestas.</string>

    <!-- Markers -->
    <string name="markers_empty">No hay marcadores.</string>

    <!-- App User Markers -->
    <string name="app_user_marker_map">Continuar</string>
    <string name="app_user_marker_submit">Guardar</string>

    <!-- Sync -->
    <string name="sync">Sincronizar</string>
    <string name="sync_instructions">Antes de sincronizar, asegúrate de contar con una buena conexión a Internet.</string>
    <string name="sync_progress">No hay sincronizacion en curso.</string>
    <string name="sync_survey">Enviando encuesta %1$d</string>
    <string name="sync_survey_error">Error sincronizando encuesta %1$d</string>
    <string name="sync_marker">Enviando marcadores</string>
    <string name="sync_marker_error">Error sincronizando marcadores</string>
    <string name="sync_fetch_markers">Obteniendo marcadores</string>
    <string name="sync_fetch_markers_error">No fue posible recuperar los marcadores</string>
    <string name="sync_fetch_zones">Obteniendo Zonas</string>
    <string name="sync_fetch_zones_error">No fue posible recuperar las zonas</string>
    <string name="sync_success">Se ha completado la sincronización</string>

    <!-- App User Surveys -->
    <string name="app_user_survey_submit">Guardar</string>
    <string name="app_user_survey_save_error">No fue posible guardar la encuesta. Por favor intente más tarde.</string>
    <string name="app_user_survey_save_success">Se ha guardado la encuesta.</string>

    <!-- validations -->
    <string name="validation_presence">es requerido</string>
    <string name="validation_length_minimum">mínimo %1$d caracteres</string>
    <string name="validation_length_maximum">máximo %1$d caracteres</string>
    <string name="validation_length_is">exactamente %1$d caracteres</string>
    <string name="validation_numericality">no es número</string>
    <string name="validation_numericality_only_integer">no es un entero</string>
    <string name="validation_numericality_odd">no es non</string>
    <string name="validation_numericality_even">no es par</string>
    <string name="validation_numericality_equal">no es igual a %1$f</string>
    <string name="validation_numericality_greater_than">no es mayor a %1$f</string>
    <string name="validation_numericality_greater_or_equal">no es mayor o igual a %1$f</string>
    <string name="validation_numericality_less_than">no es menor a %1$f</string>
    <string name="validation_numericality_less_or_equal">no es menor o igual a %1$f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
