<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/markers" android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/navigation_drawer_markers" />
        <item android:id="@+id/surveys" android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/navigation_drawer_surveys" />
        <item android:id="@+id/sync" android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/navigation_drawer_sync" />
    </group>

    <item android:title="Opciones">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_lock_idle_lock"
                android:title="@string/navigation_drawer_logout" />
        </menu>
    </item>

</menu>