<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eucledian.comapp.root.sync.SyncFragment">

    <TextView
        android:id="@+id/syncCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_warning"/>

    <TextView
        android:id="@+id/syncStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_progress"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center" />

    <Button
        android:id="@+id/syncBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sync"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/syncLoadingView"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/syncStatus"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
